kubernetes/using-ingress/dash.yaml
kind: Service
apiVersion: v1
metadata:
  name: dash-external
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
  selector:
    k8s-app: kubernetes-dashboard
  loadBalancerIP: 40.127.206.0
  loadBalancerSourceRanges:
  - 86.163.71.191/32
