kubernetes/using-ingress/data-api.svc.yaml
#
# Deploy the back end data API microservice in Kubernetes
#

# ------------------- Loadbalancer ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: data-api-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  selector:
    app: data-api
