kubernetes/using-ingress/frontend.svc.yaml
#
# Deploy the front end Angular UI microservice in Kubernetes
#

# ------------------- Loadbalancer ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: frontend
