kubernetes/using-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "smilr-ingress"
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
          # !CHANGE THIS! To match your real DNS zone as created when you deployed AKS
  - host: smilr.7e28d40aaab5415089e6.northeurope.aksapp.io
    http:
      paths:
      - path: /api
        backend:
          serviceName: data-api-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend-svc
          servicePort: 80
  # - host: smilrkube.benco.io
  #   http:
  #     paths:
  #     - path: /api
  #       backend:
  #         serviceName: data-api-svc
  #         servicePort: 80
  #     - path: /
  #       backend:
  #         serviceName: frontend-svc
  #         servicePort: 80
